After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783714 - i586 build issue -- expects argument of type 'long int', but argument 4 has type 'gint64 {aka long long int}'
i586 build issue -- expects argument of type 'long int', but argument 4 has t...
Status: RESOLVED FIXED
Product: bijiben
Classification: Applications
Component: general
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Bijiben maintainer(s)
Bijiben maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-06-12 22:09 UTC by Bjørn Lie
Modified: 2017-06-15 13:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
memo-provider: Wrong output 64 bits format (1.22 KB, patch)
2017-06-15 13:42 UTC, Isaque Galdino
committed Details | Review

Description Bjørn Lie 2017-06-12 22:09:41 UTC
Since https://bugzilla.gnome.org/show_bug.cgi?id=783465 got fixed, I could remove the --disable-Werror passing to configure, and that revealed a different bug for i586.



[   75s] make  all-am
[   75s] make[5]: Entering directory '/home/abuild/rpmbuild/BUILD/bijiben-3.24.0/src/libbiji'
[   75s]   CC       libbiji_la-biji-date-time.lo
[   75s]   CC       libbiji_la-biji-error.lo
[   75s]   CC       libbiji_la-biji-info-set.lo
[   75s]   CC       libbiji_la-biji-item.lo
[   75s]   CC       libbiji_la-biji-manager.lo
[   75s]   CC       libbiji_la-biji-note-id.lo
[   75s]   CC       libbiji_la-biji-notebook.lo
[   75s]   CC       libbiji_la-biji-note-obj.lo
[   77s]   CC       libbiji_la-biji-string.lo
[   77s]   CC       libbiji_la-biji-timeout.lo
[   77s]   CC       libbiji_la-biji-tracker.lo
[   77s]   CC       libbiji_la-biji-zeitgeist.lo
[   78s]   CC       libbiji_la-biji-marshalers.lo
[   78s]   CC       deserializer/libbiji_la-biji-lazy-deserializer.lo
[   78s]   CC       deserializer/libbiji_la-biji-tomboy-reader.lo
[   78s]   CC       editor/libbiji_la-biji-editor-selection.lo
[   78s]   CC       editor/libbiji_la-biji-webkit-editor.lo
[   78s]   CC       provider/libbiji_la-biji-import-provider.lo
[   78s]   CC       provider/libbiji_la-biji-local-note.lo
[   79s]   CC       provider/libbiji_la-biji-local-provider.lo
[   79s]   CC       provider/libbiji_la-biji-memo-note.lo
[   79s]   CC       provider/libbiji_la-biji-memo-provider.lo
[   79s]   CC       provider/libbiji_la-biji-own-cloud-note.lo
[   79s]   CC       provider/libbiji_la-biji-own-cloud-provider.lo
[   80s]   CC       provider/libbiji_la-biji-provider.lo
[   80s]   CC       serializer/libbiji_la-biji-lazy-serializer.lo
[   81s] In file included from /usr/include/glib-2.0/glib.h:62:0,
[   81s]                  from /usr/include/evolution-data-server/libedataserver/e-cancellable-locks.h:31,
[   81s]                  from /usr/include/evolution-data-server/libedataserver/libedataserver.h:23,
[   81s]                  from /usr/include/evolution-data-server/libecal/libecal.h:23,
[   81s]                  from provider/biji-memo-provider.c:28:
[   81s] provider/biji-memo-provider.c: In function 'handle_next_item':
[   81s] provider/biji-memo-provider.c:203:14: error: format '%li' expects argument of type 'long int', but argument 4 has type 'gint64 {aka long long int}' [-Werror=format=]
[   81s]      g_debug ("created=%li", item->set.created);
[   81s]               ^              ~~~~~~~~~~~
[   81s] /usr/include/glib-2.0/glib/gmessages.h:342:32: note: in definition of macro 'g_debug'
[   81s]                                 __VA_ARGS__)
[   81s]                                 ^~~~~~~~~~~
[   81s] cc1: all warnings being treated as errors
[   81s] make[5]: *** [Makefile:793: provider/libbiji_la-biji-memo-provider.lo] Error 1
Comment 1 Isaque Galdino 2017-06-15 13:42:30 UTC
Created attachment 353822 [details] [review]
memo-provider: Wrong output 64 bits format

gcc7 is complaining about a format for a 64 bits integer. The expected
argument is of type 'long int', but it is using a 'long long int'
instead.

To fix that problem, we changed the format "%li" to "%"G_GINT64_FORMAT.
Comment 2 Isaque Galdino 2017-06-15 13:43:42 UTC
Review of attachment 353822 [details] [review]:

Pushed to master.