memo-provider: Wrong output 64 bits format

gcc7 is complaining about a format for a 64 bits integer. The expected
argument is of type 'long int', but it is using a 'long long int'
instead.

To fix that problem, we changed the format "%li" to "%"G_GINT64_FORMAT.

https://bugzilla.gnome.org/show_bug.cgi?id=783714